--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 
                 <div class="item">
                     <div>2022 - 2023</div>
-                    <span class="project-title"><a href="" target="_blank">PLANNER - PLAte Number scanNER </a></span> | <span class="project-tagline">HTML5, CSS3, JavaScript, PHP, MySQL, Git, and GitHub</span>
+                    <span class="project-title"><a href="https://github.com/Mattseph/msuriderai" target="_blank">PLANNER - PLAte Number scanNER </a></span> | <span class="project-tagline">HTML5, CSS3, JavaScript, PHP, MySQL, Git, and GitHub</span>
                 </div><!--//item-->
 
                 <div class="item">
                     <div>2021 - 2022</div>
-                    <span class="project-title"><a href="" target="_blank">QuickBites</a></span> | <span class="project-tagline">HTML5, CSS3, JavaScript, PHP, MySQL, Google Teachable Machine Git, and GitHub</span>
+                    <span class="project-title"><a href="https://github.com/Mattseph/food-ordering-system" target="_blank">QuickBites</a></span> | <span class="project-tagline">HTML5, CSS3, JavaScript, PHP, MySQL, Google Teachable Machine Git, and GitHub</span>
                 </div><!--//item-->
             </section><!--//section-->
             
