Add: Comma after Google Teachable Machine

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <div class="item">
                     <div>2021 - 2022</div>
-                    <span class="project-title"><a href="https://github.com/Mattseph/food-ordering-system" target="_blank">QuickBites</a></span> | <span class="project-tagline">HTML5, CSS3, JavaScript, PHP, MySQL, Google Teachable Machine Git, and GitHub</span>
+                    <span class="project-title"><a href="https://github.com/Mattseph/food-ordering-system" target="_blank">QuickBites</a></span> | <span class="project-tagline">HTML5, CSS3, JavaScript, PHP, MySQL, Google Teachable Machine, Git, and GitHub</span>
                 </div><!--//item-->
             </section><!--//section-->
             
